@@ -361,7 +361,9 @@ metricbeat.modules:
   period: 10s
   hosts: ["localhost:10255"]
   enabled: true
-  #ssl.certificate_authorities: ["/etc/pki/root/ca.pem"]
+  #bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+  #ssl.certificate_authorities:
+  #  - /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
   #ssl.certificate: "/etc/pki/client/cert.pem"
   #ssl.key: "/etc/pki/client/cert.key"
 
@@ -541,6 +543,11 @@ metricbeat.modules:
   hosts: ["localhost:9090"]
   #metrics_path: /metrics
   #namespace: example
+
+  # This can be used for service account based authorization:
+  #  bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+  #ssl.certificate_authorities:
+  #  - /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
 
 #------------------------------ RabbitMQ Module ------------------------------
 - module: rabbitmq
