@@ -10,10 +10,10 @@
   #  - container
   #  - volume
   period: 10s
-  hosts: ["localhost:10255"]
-  #ssl.certificate_authorities: ["/etc/pki/root/ca.pem"]
-  #ssl.certificate: "/etc/pki/client/cert.pem"
-  #ssl.key: "/etc/pki/client/cert.key"
+  hosts: ["localhost:10250"]
+  bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+  ssl.certificate_authorities:
+    - /var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt
   #username: "user"
   #password: "secret"
 
